--- a/public/psd-conversion/index.html
+++ b/public/psd-conversion/index.html
@@ -29,7 +29,7 @@
     <script src="https://kit.fontawesome.com/d75254161e.js" crossorigin="anonymous"></script>
 
 </head>
-<body onload="reveal();">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -42,29 +42,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-
-    <script>
-
-
-
-        window.addEventListener('scroll', (event) => {
-            reveal();
-        })
-
-        function reveal() {
-            var reveals = document.querySelectorAll(".reveal");
-            for (var i = 0; i < reveals.length; i++) {
-                var windowHeight = window.innerHeight;
-                var elementTop = reveals[i].getBoundingClientRect().top;
-                var elementVisible = 50;
-                if (elementTop < windowHeight - elementVisible) {
-                    reveals[i].classList.add("active");
-
-                } else {
-                    reveals[i].classList.remove("active");
-                }
-            }
-        }
-    </script>
-</body>
+  </body>
 </html>
